--- a/index.html
+++ b/index.html
@@ -12,5 +12,80 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+
+    <header>
+      <nav>
+          <a href="services.html">Services</a>
+          <a href="#">Product</a>
+          <a href="#">Vision</a>
+          <a href="#">Features</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+          <section class="logo">
+            <a href="index.html"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
+          </section>
+      </nav>
+    </header>
+
+    <div class="pagetitle">
+    <section class="pagetitle1">
+      <h1>Innovation<br>
+      On<br>
+      Demand</h1>
+
+      <a href="#">Get Started</a>
+    </section>
+
+    <section class="roundpic">
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </section>
+    </div>
+
+    <div class="featuresabout">
+    <section class="features">
+      <h2>Features</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et.<br> Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu<br> ornare nisl. Nullam convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
+    </section>
+
+    <section class="about">
+      <h2>About</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et.<br> Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu<br> ornare nisl. Nullam convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
+    </section>
+    </div>
+
+    <section class="codesnippet">
+      <img src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    </section>
+
+    <div class="servicesproductvision">
+    <section class="services">
+      <h2>Services</h2>
+          <p>Aliquam elementum magna eros, ac<br> posuere elvit tempus et. Suspendisse vel<br> tempus odio, in interdutm nisi.<br> Suspendisse eu ornare nisl. Nullam<br> convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
+    </section>
+    <section class="product">
+      <h2>Product</h2>
+        <p>Aliquam elementum magna eros, ac<br> posuere elvit tempus et. Suspendisse vel<br> tempus odio, in interdutm nisi.<br> Suspendisse eu ornare nisl. Nullam<br> convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
+    </section>
+    <section class="vision">
+      <h2>Vision</h2>
+      <p>Aliquam elementum magna eros, ac<br> posuere elvit tempus et. Suspendisse vel<br> tempus odio, in interdutm nisi.<br> Suspendisse eu ornare nisl. Nullam<br> convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
+    </section>
+    </div>
+    <section class="contact">
+        <h3>Contact</h3>
+        <address>
+          123 Way 456 Street<br>
+          Somewhere, USA<br>
+          <br>
+          1 (888) 888-8888<br>
+          <br>
+          sales@greatidea.io<br>
+        </address>
+    </section>
+
+    <footer>
+    <p>Copyright Great Idea! 2018</p>
+    </footer>  
+
 </body>
 </html>
