--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
@@ -12,34 +15,36 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
-
-    <header>
-      <nav>
-          <a href="services.html">Services</a>
-          <a href="#">Product</a>
-          <a href="#">Vision</a>
-          <a href="#">Features</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <section class="logo">
-            <a href="index.html"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
-          </section>
-      </nav>
-    </header>
-
-    <div class="pagetitle">
-    <section class="pagetitle1">
-      <h1>Innovation<br>
-      On<br>
-      Demand</h1>
-
-      <a href="#">Get Started</a>
-    </section>
-
-    <section class="roundpic">
-      <img src="img/header-img.png" alt="Image of a code snippet.">
-    </section>
+    <div class="container-nav">
+      <header>
+        <nav>
+            <a href="services.html">Services</a>
+            <a href="#">Product</a>
+            <a href="#">Vision</a>
+            <a href="#">Features</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <section class="logo">
+              <a href="index.html"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
+            </section>
+        </nav>
+      </header>
     </div>
+
+      <div class="pagetitle">
+        <section class="pagetitle1">
+          <h1>Innovation<br>
+          On<br>
+          Demand</h1>
+
+          <a href="#">Get Started</a>
+        </section>
+
+        <section class="roundpic">
+          <img src="img/header-img.png" alt="Image of a code snippet.">
+        </section>
+      </div>
+      
 
     <div class="featuresabout">
     <section class="features">
