--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
+
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
-    <div class="container-nav">
+
+  <div class="container">
       <header>
         <nav>
             <a href="services.html">Services</a>
@@ -24,13 +26,12 @@
             <a href="#">Features</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
-            <section class="logo">
-              <a href="index.html"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
-            </section>
         </nav>
+            <div>
+              <a href="index.html"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
+            </div>
       </header>
-    </div>
-
+  
       <div class="pagetitle">
         <section class="pagetitle1">
           <h1>Innovation<br>
@@ -47,15 +48,15 @@
       
 
     <div class="featuresabout">
-    <section class="features">
-      <h2>Features</h2>
-          <p>Aliquam elementum magna eros, ac posuere elvit tempus et.<br> Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu<br> ornare nisl. Nullam convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
-    </section>
+      <section class="features">
+        <h2>Features</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et.<br> Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu<br> ornare nisl. Nullam convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
+      </section>
 
-    <section class="about">
-      <h2>About</h2>
-          <p>Aliquam elementum magna eros, ac posuere elvit tempus et.<br> Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu<br> ornare nisl. Nullam convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
-    </section>
+      <section class="about">
+        <h2>About</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et.<br> Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu<br> ornare nisl. Nullam convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
+      </section>
     </div>
 
     <section class="codesnippet">
@@ -63,19 +64,20 @@
     </section>
 
     <div class="servicesproductvision">
-    <section class="services">
-      <h2>Services</h2>
+      <section class="services">
+        <h2>Services</h2>
+            <p>Aliquam elementum magna eros, ac<br> posuere elvit tempus et. Suspendisse vel<br> tempus odio, in interdutm nisi.<br> Suspendisse eu ornare nisl. Nullam<br> convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
+      </section>
+      <section class="product">
+        <h2>Product</h2>
           <p>Aliquam elementum magna eros, ac<br> posuere elvit tempus et. Suspendisse vel<br> tempus odio, in interdutm nisi.<br> Suspendisse eu ornare nisl. Nullam<br> convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
-    </section>
-    <section class="product">
-      <h2>Product</h2>
+      </section>
+      <section class="vision">
+        <h2>Vision</h2>
         <p>Aliquam elementum magna eros, ac<br> posuere elvit tempus et. Suspendisse vel<br> tempus odio, in interdutm nisi.<br> Suspendisse eu ornare nisl. Nullam<br> convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
-    </section>
-    <section class="vision">
-      <h2>Vision</h2>
-      <p>Aliquam elementum magna eros, ac<br> posuere elvit tempus et. Suspendisse vel<br> tempus odio, in interdutm nisi.<br> Suspendisse eu ornare nisl. Nullam<br> convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
-    </section>
+      </section>
     </div>
+    
     <section class="contact">
         <h3>Contact</h3>
         <address>
@@ -89,8 +91,8 @@
     </section>
 
     <footer>
-    <p>Copyright Great Idea! 2018</p>
+      <p>Copyright Great Idea! 2018</p>
     </footer>  
-
+  </div>
 </body>
 </html>
